# wpr-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/etw_analyzer/: __main__.py  app.py  server.py  trace_state.py
src/etw_analyzer/formatting/: markdown.py
src/etw_analyzer/parsing/: aggregator.py  csv_loader.py  wpa_exporter.py
src/etw_analyzer/profiles/: cpu_sampling.wpaProfile  cswitch.wpaProfile  dpc_isr.wpaProfile
src/etw_analyzer/tools/: compare.py  context_switch.py  cpu_sampling.py  dpc_isr.py  memory.py  per_cpu.py  stack_analysis.py  summary.py  system_info.py  trace_mgmt.py
tests/: test_aggregator.py  test_formatting.py  test_parsers.py  test_per_cpu.py
