[project]
name = "wpr-mcp-server"
version = "0.1.0"
description = "MCP server for analyzing Windows WPR/ETW traces — CPU sampling, DPC/ISR, per-CPU utilization, lock contention"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nithin Jose", email = "nijos@microsoft.com"},
]
keywords = ["mcp", "etw", "wpr", "windows", "performance", "tracing", "xperf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/nijosmsft/wpr-mcp-server"
Repository = "https://github.com/nijosmsft/wpr-mcp-server"
Issues = "https://github.com/nijosmsft/wpr-mcp-server/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etw_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
